# solana-security-examples

./: .gitignore  README.md  cargo.toml
docs/: DEEP_DIVE.md
examples/01-missing-signer-check/secure/: Anchor.toml  Cargo.toml
examples/01-missing-signer-check/secure/src/: lib.rs
examples/01-missing-signer-check/secure/tests/: secure_signer_test.rs
examples/01-missing-signer-check/vulnerable/: Anchor.toml  Cargo.toml
examples/01-missing-signer-check/vulnerable/src/: lib.rs
examples/01-missing-signer-check/vulnerable/tests/: vulnerable_signer_test.rs
examples/02-missing-owner-check/secure/: Cargo.toml
examples/02-missing-owner-check/secure/src/: lib.rs
examples/02-missing-owner-check/secure/tests/: secure_owner_test.rs
examples/02-missing-owner-check/vulnerable/: Cargo.toml
examples/02-missing-owner-check/vulnerable/src/: lib.rs
examples/02-missing-owner-check/vulnerable/tests/: vulnerable_owner_test.rs
examples/03-account-reinitialization/secure/src/: lib.rs
examples/03-account-reinitialization/secure/tests/: secure_reinit_test.rs
examples/03-account-reinitialization/vulnerable/src/: lib.rs
examples/03-account-reinitialization/vulnerable/tests/: vulnerable_reinit_test.rs
examples/04-arithmetic-overflow/secure/src/: lib.rs
examples/04-arithmetic-overflow/secure/tests/: secure_arithmetic_test.rs
examples/04-arithmetic-overflow/vulnerable/src/: lib.rs
examples/05-type-cosplay/tests/: type_cosplay_test.rs
examples/06-unchecked-pda/tests/: unchecked_pda_test.rs
examples/07-cpi-authorization/tests/: cpi_authorization_test.rs
(+7 files in other folders)
