[package]
name = "secure-signer"
version = "0.1.0"
description = "Secure implementation with proper signer verification"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_signer"
path = "lib.rs"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
tokio = { version = "1", features = ["full"] }